API sinh viên, giảng viên, đăng ký chuyên ngành của client
